--- a/Portfolio/Fuzor/fuzor.html
+++ b/Portfolio/Fuzor/fuzor.html
@@ -64,7 +64,7 @@
         <p class="underline_section">Designed and implemented the movement system for player controls</p>
         <p>Researched and recorded many of the sound effects</p>
       </div>
-      <h1>Team Members</h1>
+      <h1>Other Team Members</h1>
       <div class="table_field">
         <p class="underline_section"><span class="member_name">Dylan Sunkel</span> - Lead Artist, Lead Designer</p>
         <p class="underline_section"><span class="member_name">Chase Rayment</span> - Lead Sound Designer, Lead Programmer</p>
