--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -74,7 +74,7 @@
       accomplished what I thought had been a decent amount of features.</p>
       <p>I never finished the project at the time and I had always wanted to since I stopped. A year later,
       I came back to finish the project and create the rules feature. The amount of work I was able to get done within a
-      short two hours of work was almost comparable to what had taken a week before. Looking back at what had taken
+      short two hours was almost comparable to what had taken a week before. Looking back at what had taken
       me a week to write a year ago felt embarressing. This shift made it apparent that I had become a
       much faster and more percise programmer after a year of CS assignments and an entire C++ game.</p>
     </div>
