--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -7,7 +7,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/fahrenheit.png">
+        <img src="../Resources/riddlers_revenge.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -24,6 +24,15 @@
       </div>
     </div>
     <div class="main">
+      <!-- X-Craft -->
+      <table class="piece">
+        <tr>
+          <td class="xcraft piece_element piece_language cpp">C++</td>
+          <td class="xcraft piece_element piece_name">X-Craft</td>
+          <td class="xcraft piece_element piece_description">A top down, 2D, cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
+          <td class="xcraft piece_element piece_more"><div><a href="XCraft/xcraft.html">More...</a></div></td></td>
+        </tr>
+      </table>
       <!-- Phonet Generator -->
       <table class="piece">
         <tr>
@@ -50,15 +59,6 @@
           <td class="fuzor piece_element piece_name">Fuzor</td>
           <td class="fuzor piece_element piece_description">A 2D, sidescrolling platformer where four players take control of heroes to escape an alien infestation from their ship.</td>
           <td class="fuzor piece_element piece_more"><div><a href="Fuzor/fuzor.html">More...</a></div></td>
-        </tr>
-      </table>
-      <!-- X-Craft -->
-      <table class="piece">
-        <tr>
-          <td class="xcraft piece_element piece_language cpp">C++</td>
-          <td class="xcraft piece_element piece_name">X-Craft</td>
-          <td class="xcraft piece_element piece_description">A top down, 2D, cooperative game in which two players take control of a futuristic boat in order to defeat their enemies.</td>
-          <td class="xcraft piece_element piece_more"><div><a href="XCraft/xcraft.html">More...</a></div></td></td>
         </tr>
       </table>
       <!-- Water -->
