--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -7,7 +7,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/fahrenheit.png">
+        <img src="../Resources/sfmm.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
