--- a/Portfolio/Amperage/amperage.html
+++ b/Portfolio/Amperage/amperage.html
@@ -59,7 +59,7 @@
         <p class="underline_section">Implemented the core mechanics of the game</p>
         <p>Created over 20 prototype levels on paper and later refined them in engine</p>
       </div>
-      <h1>Team Members</h1>
+      <h1>Other Team Members</h1>
       <div class="table_field">
         <p class="underline_section"><span class="member_name">Dylan Sunkel</span> - Lead Artist, Designer</p>
         <p class="underline_section"><span class="member_name">Chase Rayment</span> - Lead Sound Designer, Lead Programmer</p>
