Portfolio Updated | Hobbies Added | Contact Fixed

--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -17,22 +17,30 @@
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../Portfolio/portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact current">Contact</td>
           </tr>
         </table>
       </div>
     </div>
-    <div class="contact_info">
+    <div class="card">
       <div class="contact_card">
-        <p>Email: connortdeakin@gmail.com</p>
-        <p>Phone: 805-748-6040</p>
+        <h1>E-mail</h1>
+        <div class="table_field">
+          <p>connortdeakin@gmail.com</p>
+        </div>
+        <h1>Phone</h1>
+        <div class="table_field">
+          <p>1-805-748-6040</p>
+        </div>
       </div>
     </div>
-    <div class="reach_info">
-      <p>The best way to reach me will either be through email or text. Unless I have
-      a number saved in my phone, I will have the call sent to voice mail so I can listen
-      to the message later.</p>
+    <div class="description">
+      <p><i>The best way to reach me</i> will either be through email or text. When I
+      recieve calls from unlisted phone numbers, I tend to send them to voicemail.
+      Though, I have learned after answering many of these calls that most of them are spam
+      callers. With that being said, I sincerely appologise if you call and only
+      hear my lacluster and immature fart sounds come through your speaker.</p>
     </div>
   </body>
 </html>
