--- a/Portfolio/Amperage/amperage.html
+++ b/Portfolio/Amperage/amperage.html
@@ -17,7 +17,7 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
@@ -82,7 +82,7 @@
       pencil and paper GDD for Amperage here.</p>
       <h1 class="content_header">Creating Circuit Boards</h1>
       <p>While creating this game, I worked as both a designer and a programmer.
-      When students come into DigiPen, they are not expected to have an experience
+      When students come into DigiPen, they are not expected to have any experience
       with game development or programming. Luckily, I had been taking programming
       classes since my sophomore year of highschool. Because of this, the scripting
       came to me very easily, allowing me to take two roles on the project.</p>
@@ -99,7 +99,7 @@
       next step was to put it into the engine and playtest it. I also have some copies
       of these paper prototypes still. If you're interested you can find them here.</p>
       <h1 class="content_header">Looking Back</h1>
-      <p>Whilst this project wasn't too bad for a first DigiPen game, there are definitely
+      <p>Whilst this project wasn't too for a first DigiPen game, there are definitely
       parts that could have been done differently to make the project go more smoothly than
       it did. For one, we were using SVN at the time. Now, after two years of using Git, I can safely say
       that using SVN is probably not the best choice. Additionally,
