--- a/Portfolio/CodeSamples/codesamples.html
+++ b/Portfolio/CodeSamples/codesamples.html
@@ -17,7 +17,7 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
@@ -45,8 +45,8 @@
       over the actual game. In the engine this pipeline was built for, that HUD
       would be in a different space than the space that the game is in. This rendering pipeline
       makes it possible to render one space on top of another using one static RendererPool
-      class and multiple Renderer instances. If you would like to see more about the Engine
-      this file was used for, you can find it on the <a href="../XCraft/xcraft.html">X-Craft page</a>. It was built specifically
+      class and multiple Renderer instances. If you would like to see more about the engine
+      these files are used for, you can find it on the <a href="../XCraft/xcraft.html">X-Craft page</a>. It was built specifically
       for the game.</p>
       <h1 class="content_header">Object Allocator</h1>
       <p><a href="object_allocator.zip">Download Object Allocator</a></p>
@@ -56,7 +56,7 @@
       memory manager aims to replace malloc() and free() or new and delete and instead
       use a custom system for managing memory. The Object Allocator still uses
       new and delete for creating a freeing memory pages, but besides this, the Object
-      Allocator manages everything in the page on its own. </p>
+      Allocator manages everything in a memory page on its own. </p>
     </div>
   </body>
 </html>
