--- a/Portfolio/PhonetGenerator/phonet_generator.html
+++ b/Portfolio/PhonetGenerator/phonet_generator.html
@@ -17,7 +17,7 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
@@ -53,8 +53,8 @@
       <h1>Contributions</h1>
       <div class="table_field">
         <p class="underline_section">String parsing and manipulation</p>
-        <p class="underline_section">Implemented a usable interface with getopt</p>
-        <p>Created a "relatively" easy syntax for configuration files</p>
+        <p class="underline_section">Implemented a commandline interface with getopt</p>
+        <p>Created a <i>relatively</i> easy to use syntax for configuration files</p>
       </div>
     </div>
     <div class="description">
