--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -17,7 +17,7 @@
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
             <td class="menu_element portfolio current">Portfolio</td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact link"><a href="../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
