--- a/Portfolio/XCraft/xcraft.html
+++ b/Portfolio/XCraft/xcraft.html
@@ -17,7 +17,7 @@
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
             <td class="menu_element portfolio link"><a href="../portfolio.html">Portfolio</a></td>
-            <td class="menu_element hobbies link">Hobbies</td>
+            <td class="menu_element hobbies link"><a href="../../Hobbies/hobbies.html">Hobbies</a></td>
             <td class="menu_element contact link"><a href="../../Contact/contact.html">Contact</a></td>
           </tr>
         </table>
@@ -34,7 +34,7 @@
         <li><a href="x-craft_setup(x86).exe" download>Download X-Craft Installer</a></li>
         <li><a href="x-craft_source.zip" download>Download X-Craft Source</a></li>
       </ul>
-      <iframe class="youtube_video" src="https://youtube.com/embed/gNnC1__7by8" allowfullscreen></iframe>
+      <iframe class="youtube_video" src="https://youtube.com/embed/m4n0Hod47k8" allowfullscreen></iframe>
     </div>
     <div class="overview">
       <h1>Role</h1>
