--- a/Hobbies/RollerCoasters/rollercoasters.html
+++ b/Hobbies/RollerCoasters/rollercoasters.html
@@ -38,12 +38,12 @@
     <div class="table">
       <h1>Coaster Count</h1>
       <div class="cell_contents">
-        <p><b><i>55</i></b></p>
+        <p><b><i>59</i></b></p>
       </div>
       <h1>Ridden Coasters</h1>
       <div class="cell_contents">
-        <p class="underline_section">Apocalypse - <a href="https://rcdb.com/4173.htm">RCDB</a></p>
-        <p class="underline_section">Batman The Ride - <a href="https://rcdb.com/24.htm">RCDB</a></p>
+        <p class="underline_section">Apocalypse the Ride - <a href="https://rcdb.com/4173.htm">RCDB</a></p>
+        <p class="underline_section">Batman the Ride - <a href="https://rcdb.com/24.htm">RCDB</a></p>
         <p class="underline_section">Big Thunder Mountain Railroad - <a href="https://rcdb.com/202.htm">RCDB</a></p>
         <p class="underline_section">Boomerang - <a href="https://rcdb.com/290.htm">RCDB</a></p>
         <p class="underline_section">California Screamin' - <a href="https://rcdb.com/731.htm">RCDB</a></p>
@@ -56,11 +56,13 @@
         <p class="underline_section">Fahrenheit - <a href="https://rcdb.com/4049.htm">RCDB</a></p>
         <p class="underline_section">Flight Deck - <a href="https://rcdb.com/80.htm">RCDB</a></p>
         <p class="underline_section">Flight of the Hippogriff - <a href="https://rcdb.com/12812.htm">RCDB</a></p>
+        <p class="underling_section">Fly the Great Nor'Easter - <a href="https://rcdb.com/158.htm">RCDB</a></p>
         <p class="underline_section">Full Throttle - <a href="https://rcdb.com/10948.htm">RCDB</a></p>
         <p class="underline_section">GhostRider - <a href="https://rcdb.com/526.htm">RCDB</a></p>
         <p class="underline_section">Gold Rusher - <a href="https://rcdb.com/266.htm">RCDB</a></p>
         <p class="underline_section">Goliath - <a href="https://rcdb.com/615.htm">RCDB</a></p>
         <p class="underline_section">Great Bear - <a href="https://rcdb.com/468.htm">RCDB</a></p>
+        <p class="underling_section">Great White - <a href="https://rcdb.com/408.htm">RCDB</a></p>
         <p class="underline_section">Grizzly - <a href="https://rcdb.com/77.htm">RCDB</a></p>
         <p class="underline_section">Invertigo - <a href="https://rcdb.com/473.htm">RCDB</a></p>
         <p class="underline_section">Kingda Ka - <a href="https://rcdb.com/2832.htm">RCDB</a></p>
@@ -74,11 +76,13 @@
         <p class="underline_section">Ninja - <a href="https://rcdb.com/129.htm">RCDB</a></p>
         <p class="underline_section">Nitro - <a href="https://rcdb.com/1106.htm">RCDB</a></p>
         <p class="underline_section">Pony Express - <a href="https://rcdb.com/4089.htm">RCDB</a></p>
+        <p class="underling_section">Python - <a href="https://rcdb.com/682.htm">RCDB</a></p>
         <p class="underline_section">Revenge of the Mummy the Ride - <a href="https://rcdb.com/2464.htm">RCDB</a></p>
         <p class="underline_section">Revolution - <a href="https://rcdb.com/130.htm">RCDB</a></p>
         <p class="underline_section">Riddler's Revenge - <a href="https://rcdb.com/470.htm">RCDB</a></p>
         <p class="underline_section">Rock 'n' Roller Coaster - <a href="https://rcdb.com/560.htm">RCDB</a></p>
         <p class="underline_section">Scream! - <a href="https://rcdb.com/2169.htm">RCDB</a></p>
+        <p class="underling_section">Sea Serpent - <a href="https://rcdb.com/302.htm">RCDB</a></p>
         <p class="underline_section">Sidewinder - <a href="https://rcdb.com/109.htm">RCDB</a></p>
         <p class="underline_section">Sierra Sidewinder - <a href="https://rcdb.com/3704.htm">RCDB</a></p>
         <p class="underline_section">Silver Bullet - <a href="https://rcdb.com/2536.htm">RCDB</a></p>
