water gifs added

--- a/Portfolio/XCraft/xcraft.html
+++ b/Portfolio/XCraft/xcraft.html
@@ -88,14 +88,15 @@
       It had to match the art style of the game fairly well, represent a water
       surface, and scroll across the screen to accurately represent the motion
       experienced by the player's ship</p>
-      <p>Below, there is a download link to the shader's source files and a link
-      to an Imgur ablum with some gifs showing the results of the water shader. The
+      <p>Below, there is a download link to the shader's source files and two links
+      to gifs that show the results produced by the water shader. The
       bulk of the shader code is in water.frag. This file has also been fully
       commented to provide an in depth explanation of the shader and how it
       works.</p>
       <ul>
-        <li><a href="water_shader_source.zip">Water Shader Source Files</a></li>
-        <li><a href="#">WATER GIFS HERE</a></li>
+        <li><a href="water_shader_source.zip" download>Water Shader Source Files</a></li>
+        <li><a href="water_still.gif">Still water with changing peak colors</a></li>
+        <li><a href="water_motion.gif">Panning water with constant colors</a></li>
       </ul>
       <h1 class="content_header">Looking Back</h1>
       <p>I do not think that X-Craft turned out to be the best game that I
