--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -12,7 +12,7 @@
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer, Nerd</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
@@ -31,16 +31,13 @@
         </div>
         <h1>Phone</h1>
         <div class="table_field">
-          <p>1-805-748-6040</p>
+          <p>18057486040</p>
         </div>
       </div>
     </div>
     <div class="description">
       <p><i>The best way to reach me</i> will either be through email or text. When I
       recieve calls from unlisted phone numbers, I tend to send them to voicemail.
-      Though, I have learned after answering many of these calls that most of them are spam
-      callers. With that being said, I sincerely appologise if you call and only
-      hear my lacluster and immature fart sounds come through your speaker.</p>
     </div>
   </body>
 </html>
