--- a/Hobbies/RollerCoasters/rollercoasters.html
+++ b/Hobbies/RollerCoasters/rollercoasters.html
@@ -12,7 +12,7 @@
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer, Nerd</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../../index.html">Home</a></td>
@@ -31,7 +31,7 @@
       up with the roller coaster industry more than I ever have before.</p>
 
       <h1 class="content_header">Rides</h1>
-      <p>In the table below, you will find my coaster count (the number of coaster
+      <p>In the table below, you will find my coaster count (the number of coasters
       I have ridden) along with every ride I have been on. The <a href="https://rcdb.com/">RCDB (Roller Coaster
       Database)</a> links will take you to the rides' database pages.</p>
     </div>
