--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -12,7 +12,7 @@
       <div class="menu_bar">
         <table class="menu">
           <tr>
-            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer, Nerd</td>
+            <td class="menu_element name" colspan="4">Connor "Underdisc" Deakin - Programmer</td>
           </tr>
           <tr>
             <td class="menu_element home link"><a href="../index.html">Home</a></td>
