--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
         BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
         Simulation)</a> program in order to break my way into the games industry.</p>
-        <p>Appologies in advance if the website is not great. I wrote it all in
-        html and css just to get the opportunity to learn some web development.</p>
+        <p>Just a quick note. This website is a constant work in progress. If you
+        notice any issues and you would like to let me know, feel free to contact
+        me about it. Thanks!</p>
         <h1 class="content_header">Short Auto-biography</h1>
         <p>Before considering a career in games, I was first fascinated by the
         roller coaster manufacturing industry. This passion first arose because my older brother
