Pictures, updated cc

--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -7,7 +7,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../Resources/riddlers_revenge.png">
+        <img src="../Resources/flight_deck.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
