--- a/Hobbies/RollerCoasters/rollercoasters.html
+++ b/Hobbies/RollerCoasters/rollercoasters.html
@@ -7,7 +7,7 @@
   <body>
     <div id="header">
       <div class="banner_image">
-        <img src="../../Resources/riddlers_revenge.png">
+        <img src="../../Resources/skyrush.png">
       </div>
       <div class="menu_bar">
         <table class="menu">
@@ -38,7 +38,7 @@
     <div class="table">
       <h1>Coaster Count</h1>
       <div class="cell_contents">
-        <p><b><i>59</i></b></p>
+        <p><b><i>60</i></b></p>
       </div>
       <h1>Ridden Coasters</h1>
       <div class="cell_contents">
@@ -47,6 +47,7 @@
         <p class="underline_section">Big Thunder Mountain Railroad - <a href="https://rcdb.com/202.htm">RCDB</a></p>
         <p class="underline_section">Boomerang - <a href="https://rcdb.com/290.htm">RCDB</a></p>
         <p class="underline_section">California Screamin' - <a href="https://rcdb.com/731.htm">RCDB</a></p>
+        <p class="underline_section">Canyon Blaster - <a href="https://rcdb.com/104.htm">RCDB</a></p>
         <p class="underline_section">Colossus - <a href="https://rcdb.com/26.htm">RCDB</a></p>
         <p class="underline_section">Comet - <a href="https://rcdb.com/106.htm">RCDB</a></p>
         <p class="underline_section">Déjà Vu - <a href="https://rcdb.com/748.htm">RCDB</a></p>
