--- a/Portfolio/XCraft/xcraft.html
+++ b/Portfolio/XCraft/xcraft.html
@@ -78,7 +78,9 @@
       pipeline I created to render the game. You may have noticed that I said
       I created two graphics pipelines in the table above. It's true, I actually
       did create two, but the first was so incredibly terrible that I needed
-      to go back and refactor it from the ground up.</p>
+      to go back and refactor it from the ground up. Here, I will briefly describe
+      the final results of the system and how they work under the hood.</p>
+      <p>- Currently Under Construction -</p>
       <h1 class="content_header">Water Technology</h1>
       <p>This project was the first project that I used custom shaders in.
       One of these was the water shader used in the game. Though it is
