--- a/Portfolio/Amperage/amperage.html
+++ b/Portfolio/Amperage/amperage.html
@@ -79,7 +79,8 @@
       I say "very bare bones", I mean it. Well, for the very first assignment,
       I wrote up the simple GDD that turned into Amperage. I actually
       still have a copy of the assignment. If you're interested, you can find the original
-      pencil and paper GDD for Amperage here.</p>
+      pencil and paper GDD for Amperage below.</p>
+      <p><a href="amperage_original_gdd.pdf" download>amperage_original_gdd.pdf</a></p>
       <h1 class="content_header">Creating Circuit Boards</h1>
       <p>While creating this game, I worked as both a designer and a programmer.
       When students come into DigiPen, they are not expected to have any experience
@@ -97,7 +98,8 @@
       draw out the entire level on graph paper so I could quickly change and edit
       problems I noticed while drawing. Once I had the idea layed out on paper, the
       next step was to put it into the engine and playtest it. I also have some copies
-      of these paper prototypes still. If you're interested you can find them here.</p>
+      of these paper prototypes still. If you're interested you can find them below.</p>
+      <p><a href="amperage_paper_prototypes.pdf" download>amperage_paper_prototypes.pdf</a></p>
       <h1 class="content_header">Looking Back</h1>
       <p>Whilst this project wasn't too for a first DigiPen game, there are definitely
       parts that could have been done differently to make the project go more smoothly than
