--- a/Hobbies/hobbies.html
+++ b/Hobbies/hobbies.html
@@ -29,7 +29,7 @@
         <tr>
           <td class="mnr hobby_element hobby_name">Modnation Racers</td>
           <td class="mnr hobby_element hobby_description">Modnation Races was a kart racing game I used to play on the PS3 where you could create your own characters, karts, and tracks. Here, I put all of the tracks that I am willing to put on the internet.</td>
-          <td class="mnr hobby_element hobby_more">More..</td>
+          <td class="mnr hobby_element hobby_more"><a href="ModnationRacers/modnationracers.html">More..</a></td>
         </tr>
       </table>
       <!-- ROLLER COASTERS -->
