Modnation under construction

--- a/Hobbies/ModnationRacers/modnationracers.html
+++ b/Hobbies/ModnationRacers/modnationracers.html
@@ -24,16 +24,8 @@
       </div>
     </div>
     <div class="text">
-      <h1 class="main_header content_header">Roller Coasters</h1>
-      <p>Ever since my brother introduced me to Roller Coaster Tycoon when I was
-      a younger, roller coasters have been a major passion of mine. Recently,
-      this passion was reinvigorated by <a href="https://www.planetcoaster.com/us?gclid=CjwKCAjwxJnNBRAMEiwA8X_-QUU-C1WSg0Tj2quIYx963sTm0_kuT0pxUTtCGTuBs-TWJ_wqH4cM4RoCrysQAvD_BwE">Planet Coaster</a>, and now I am keeping
-      up with the roller coaster industry more than I ever have before.</p>
-
-      <h1 class="content_header">Rides</h1>
-      <p>In the table below, you will find my coaster count (the number of coasters
-      I have ridden) along with every ride I have been on. The <a href="https://rcdb.com/">RCDB (Roller Coaster
-      Database)</a> links will take you to the rides' database pages.</p>
+      <h1 class="main_header content_header">Modnation Racers</h1>
+      <p>This page is currently under construction.</p>
     </div>
   </body>
 </html>
