--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
         </table>
       </div>
     </div>
-    <div class="main">
-      <div class="content">
-        <h1 class="content_header">Welcome</h1>
-        <p>Thanks for visiting my website. I am a third year student at DigiPen:
-        Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
-        BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
-        Simulation)</a> program in order to break my way into the games industry.</p>
-        <p>Just a quick note. This website is a constant work in progress. If you
-        notice any issues and you would like to let me know, feel free to contact
-        me about it. Thanks!</p>
-        <table class="spanning_button">
-          <tr>
-            <td><a href="about.html">About me ...</a></td>
-          </tr>
-        </table>
-      </div>
+    <div class="text">
+      <h1 class="main_header content_header">Welcome</h1>
+      <p>Thanks for visiting my website. I am a third year student at DigiPen:
+      Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
+      BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
+      Simulation)</a> program in order to break my way into the games industry.</p>
+      <p>Just a quick note. This website is a constant work in progress. If you
+      notice any issues and you would like to let me know, feel free to contact
+      me about it. Thanks!</p>
+      <table class="spanning_button">
+        <tr>
+          <td><a href="about.html">About me ...</a></td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
