Fixed about styling

--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
       </div>
     </div>
     <div class="main">
-      <div class="content">
-        <h1 class="content_header">Short Auto-biography</h1>
+      <div class="text">
+        <h1 class="main_header content_header">Short Auto-biography</h1>
         <p>Before considering a career in games, I was first fascinated by the
         roller coaster manufacturing industry. This passion first arose because my older brother
         introduced me to the first game I played, Roller Coaster Tycoon. It wasn't until
