--- a/about.html
+++ b/about.html
@@ -35,10 +35,10 @@
         <a href="https://en.wikipedia.org/wiki/ModNation_Racers">Modnation Racers.</a>
         At the time, I didn't have a PS3 to play the game with, but
         I got one with the specific intention of playing Modnation Racers. I played
-        the game almost everyday for a couple of years. It was the primary game that
-        got me interested into the design section of the games industry. At the time
-        I was also taking programming classes in highschool, but they didn't interest
-        me as much as they do today.</p>
+        the game almost everyday for a couple of years. It was the primary game responsible for
+        developing my interest in game designe. At the time I was also taking
+        programming classes in highschool, but they didn't interest me as much
+        as they do today.</p>
         <p>Once I knew I was going to make my way into games, I found a school by the name of DigiPen
         in Redmond, Washington. In my senior year of high school, I applied to the
         <a href="https://www.digipen.edu/academics/degree-programs/ba-game-design/">
