--- a/Portfolio/Fuzor/fuzor.html
+++ b/Portfolio/Fuzor/fuzor.html
@@ -72,7 +72,18 @@
       </div>
     </div>
     <div class="description">
-
+      <!--<h1 class="content_header">Movement</h1>
+      <p>When starting this project, we knew that we wanted a movement system that would feel good for players.
+      Personally, I have one major goal when programming any game system that responds to user input. When a player
+      presses a button, they should not feel like they are pressing a button. They should feel like they are moving forward,
+      building a structure, researching a technology, etc. In other words, it should feel like they are actually doing
+      the action that they are performing in the game. There are many games that do this very well, but a few exceptional
+      games with this quality are Journey and Flower by thatgamecompany. This is so important that thatgamecompany actually
+      has employees dedicated to this job.</p>
+      <p>When starting to create Fuzor, we knew that we wanted to accomplish this quality with the movement system. As someone
+      who is very interested in game feel, I took on this job. Here, I will present the idea of how this system works under
+      the hood. Keep in mind, I wrote this imlementation a long time ago, so my memory is a fuzzy, but I remember the core idea
+      behind the implementation</p>-->
     </div>
   </body>
 </html>
