--- a/Portfolio/Water/water.html
+++ b/Portfolio/Water/water.html
@@ -47,7 +47,7 @@
       </div>
       <h1>Contributions</h1>
       <div class="table_field">
-        <p class="underline_section">Implemented a camera for navigating a viewing a 3D display</p>
+        <p class="underline_section">Implemented a camera for navigating and viewing a 3D display</p>
         <p class="underline_section">Created a CPU based implementation of gerstner waves</p>
         <p class="underline_section">Created a CPU based implementaiton of a 2 dimensional perlin noise function</p>
         <p class="underline_section">Developed an editor using Imgui that can be used to manipulate the ocean simulation</p>
