--- a/Portfolio/portfolio.html
+++ b/Portfolio/portfolio.html
@@ -33,6 +33,17 @@
           <td class="xcraft piece_element piece_more"><div><a href="XCraft/xcraft.html">More...</a></div></td></td>
         </tr>
       </table>
+<!-- 
+      <!-- Graphics -->
+      <table class="piece">
+        <tr>
+          <td class="graphics piece_element piece_language cpp">C++</td>
+          <td class="graphics piece_element piece_name">Graphics</td>
+          <td class="graphics piece_element piece_description">A sample graphics application that displays a large number of graphics features in action.</td>
+          <td class="graphics piece_element piece_more"><div><a href="Graphics/graphics.html">More...</a></div></td></td>
+        </tr>
+      </table>
+-->
       <!-- Phonet Generator -->
       <table class="piece">
         <tr>
