--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="text">
       <h1 class="main_header content_header">Welcome</h1>
-      <p>Thanks for visiting my website. I am a third year student at DigiPen:
+      <p>Thanks for visiting my website. I am in my last semester at DigiPen:
       Institute of Technology pursuing a degree in the <a href="https://www.digipen.edu/academics/degree-programs/real-time-interactive-simulation/">
       BSCS RTIS (Bachelors of Science in Computer Science in Real-Time Interactive
       Simulation)</a> program in order to break my way into the games industry.</p>
